--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -24,7 +24,9 @@
             </button>
         </mat-toolbar>
         <div style="padding: 20px" class="p-3">
-            <app-users></app-users>
+            <!-- <app-users></app-users> -->
+            <app-categories></app-categories>
+
         </div>
     </div>
 
