--- a/src/app/layouts/dashboard/pages/users/components/user-form/user-form.component.html
+++ b/src/app/layouts/dashboard/pages/users/components/user-form/user-form.component.html
@@ -1,31 +1,42 @@
-<form class="grid formgrid">
+<form [formGroup]="userForm" (ngSubmit)="onSubmit()" class="grid formgrid">
     <div class="col-6">
         <mat-form-field class="w-full">
             <mat-label>Nombre</mat-label>
-            <input matInput type="text">
+            <input formControlName="firstName" matInput type="text">
         </mat-form-field>
     </div>
     <div class="col-6">
         <mat-form-field class="w-full">
             <mat-label>Apellido</mat-label>
-            <input matInput type="text">
+            <input formControlName="lastName" matInput type="text">
         </mat-form-field>
     </div>
     <div class="col-12">
         <mat-form-field class="w-full">
             <mat-label>Email</mat-label>
-            <input matInput type="email">
+            <input formControlName="email" matInput type="email">
         </mat-form-field>
     </div>
-    <mat-form-field>
-        <mat-label>Contraseña</mat-label>
-        <input matInput type="password">
-    </mat-form-field>
-    <mat-form-field>
-        <mat-label>Rol</mat-label>
-        <mat-select>
-            <mat-option>ADMIN</mat-option>
-            <mat-option>USER</mat-option>
-        </mat-select>
-    </mat-form-field>
+    <div class="col-6">
+        <mat-form-field class="w-full">
+            <mat-label>Contraseña</mat-label>
+            <input formControlName="password" matInput type="password">
+        </mat-form-field>
+    </div>
+    <div class="col-6">
+        <mat-form-field class="w-full">
+            <mat-label>Rol</mat-label>
+            <mat-select formControlName="role">
+                <mat-option value="ADMIN">ADMIN</mat-option>
+                <mat-option value="USER">USER</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+    <div class="col-12 flex justify-content-end">
+        <button mat-flat-button color="primary">
+            Guardar
+        </button>
+    </div>
 </form>
+
+<pre>{{ userForm.value | json }}</pre>
