--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -1,12 +1,23 @@
 <mat-drawer-container class="dashboard-container" autosize>
     <mat-drawer #drawer class="example-sidenav" mode="side">
-        <p>Auto-resizing sidenav</p>
+        <p class="flex justify-content-center">Welcome!</p>
+        <div class="flex flex-column mr-5 ml-5">
+            <button class="mt-3" (click)="showFiller = !showFiller" mat-raised-button>
+                Users
+            </button>
+            <button class="mt-3" (click)="showFiller = !showFiller" mat-raised-button>
+                Students
+            </button>
+            <button class="mt-3" (click)="showFiller = !showFiller" mat-raised-button>
+                Profesors
+            </button>
+            <button class="mt-3" (click)="showFiller = !showFiller" mat-raised-button>
+                Courses
+            </button>
+        </div>
         @if (showFiller) {
         <p>Lorem, ipsum dolor sit amet consectetur.</p>
         }
-        <button (click)="showFiller = !showFiller" mat-raised-button>
-            Toggle extra text
-        </button>
     </mat-drawer>
 
     <div class="example-sidenav-content">
@@ -14,7 +25,7 @@
             <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
                 <mat-icon>menu</mat-icon>
             </button>
-            <span>My App</span>
+            <span>Harvard</span>
             <span class="example-spacer"></span>
             <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
                 <mat-icon>favorite</mat-icon>
@@ -24,8 +35,9 @@
             </button>
         </mat-toolbar>
         <div style="padding: 20px" class="p-3">
-            <!-- <app-users></app-users> -->
-            <app-categories></app-categories>
+            <!-- <app-pipes></app-pipes> -->
+            <app-users></app-users>
+            <!-- <app-categories></app-categories> -->
 
         </div>
     </div>
