--- a/src/app/layouts/dashboard/pages/users/users.component.html
+++ b/src/app/layouts/dashboard/pages/users/users.component.html
@@ -4,9 +4,6 @@
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-
     <!-- ID Column -->
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> No. </th>
@@ -29,6 +26,19 @@
     <ng-container matColumnDef="role">
         <th mat-header-cell *matHeaderCellDef> role </th>
         <td mat-cell *matCellDef="let user"> {{user.role}} </td>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> actions </th>
+        <td mat-cell *matCellDef="let user">
+            <button color="primary" mat-icon-button (click)="onDeleteUser(user.id)">
+                <mat-icon>edit</mat-icon>
+            </button>
+            <button color="warn" mat-icon-button (click)="onDeleteUser(user.id)">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
