--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -2,22 +2,19 @@
     <mat-drawer #drawer class="example-sidenav" mode="side">
         <p class="flex justify-content-center">Welcome!</p>
         <div class="flex flex-column mr-5 ml-5">
-            <button class="mt-3" (click)="showFiller = !showFiller" mat-raised-button>
+            <button class="mt-3" mat-raised-button>
                 Users
             </button>
-            <button class="mt-3" (click)="showFiller = !showFiller" mat-raised-button>
+            <button class="mt-3" mat-raised-button>
                 Students
             </button>
-            <button class="mt-3" (click)="showFiller = !showFiller" mat-raised-button>
+            <button class="mt-3" mat-raised-button>
                 Profesors
             </button>
-            <button class="mt-3" (click)="showFiller = !showFiller" mat-raised-button>
+            <button class="mt-3" mat-raised-button>
                 Courses
             </button>
         </div>
-        @if (showFiller) {
-        <p>Lorem, ipsum dolor sit amet consectetur.</p>
-        }
     </mat-drawer>
 
     <div class="example-sidenav-content">
