--- a/src/app/layouts/dashboard/dashboard.component.html
+++ b/src/app/layouts/dashboard/dashboard.component.html
@@ -32,8 +32,10 @@
             </button>
         </mat-toolbar>
         <div style="padding: 20px" class="p-3">
+            <app-rxjs-introduccion></app-rxjs-introduccion>
+            <!-- <app-rxjs-example></app-rxjs-example> -->
             <!-- <app-pipes></app-pipes> -->
-            <app-users></app-users>
+            <!-- <app-users></app-users> -->
             <!-- <app-categories></app-categories> -->
 
         </div>
