--- a/src/app/layouts/dashboard/pages/pipes/pipes.component.html
+++ b/src/app/layouts/dashboard/pages/pipes/pipes.component.html
@@ -1,4 +1,5 @@
-<p color="red" appResaltado>{{ user | fullName}}</p>
+<p color="red" appResaltado>{{ user | fullName }}</p>
 
-<p color="green" appResaltado>{{ today | date}}</p>
+<p color="green" appResaltado>{{ today | date }}</p>
 <p appResaltado>{{ price | currency: 'ARS' }}</p>
+<p appTextSize>Hola Mundo, esto es tamaño 20</p>
