--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="app-loading" *ngIf="isLoading$ | async">
+<div class="app-loading" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
 </div>
 
