--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
     <mat-spinner></mat-spinner>
 </div>
 
-<app-dashboard></app-dashboard>
+<!-- <app-dashboard></app-dashboard> -->
+<router-outlet></router-outlet>
