--- a/src/app/layouts/dashboard/dashboard.component.scss
+++ b/src/app/layouts/dashboard/dashboard.component.scss
@@ -1,3 +1,12 @@
+@use '@angular/material' as mat;
 .dashboard-container {
     height: 100vh;
+}
+
+.dashboard-sidebar {
+    width: 200px;
+}
+
+.is-active {
+    color: mat.get-color-from-palette(mat.$purple-palette, 'darker-contrast');
 }
