--- a/src/app/layouts/not-found/not-found.component.html
+++ b/src/app/layouts/not-found/not-found.component.html
@@ -1,2 +1,6 @@
-<h1>404</h1>
-<p>Pantalla no encontrada</p>
+<div>
+    <div class="div-not-found">
+        <h1>404</h1>
+        <p>Pantalla no encontrada</p>
+    </div>
+</div>
